
  From David Cournapeau:

  - Add a CheckDeclaration() call to configure contexts.

  - Improve the CheckTypeSize() code.

  - Add a Define() call to configure contexts, to add arbitrary #define
    lines to a generated configure header file.

  - Add a "gfortran" Tool module for the GNU F95/F2003 compiler.

  - Avoid use of -rpath with the Mac OS X linker.

  From Steven Knight:

  - Support the ability to subclass the new-style "str" class as input
    to Builders.

  - Improve the performance of our type-checking by using isinstance()
    with new-style classes.

  - Fix #include (and other $*PATH variables searches) of files with
    absolute path names.  Don't die if they don't exist (due to being
    #ifdef'ed out or the like).

  - Fix --interactive mode when Default(None) is used.

  - Fix --debug=memoizer to work around a bug in base Python 2.2 metaclass
    initialization (by just not allowing Memoization in Python versions
    that have the bug).

  - Have the "scons-time time" subcommand handle empty log files, and
    log files that contain no results specified by the --which option.

  - Fix the max Y of vertical bars drawn by "scons-time --fmt=gnuplot".

  - On Mac OS X, account for the fact that the header file generated
    from a C++ file will be named (e.g.) file.cpp.h, not file.hpp.

  - Fix floating-point numbers confusing the Java parser about
    generated .class file names in some configurations.

  - Document (nearly) all the values you can now fetch with GetOption().

  - Fix use of file names containing strings of multiple spaces when
    using ActionFactory instances like the Copy() or Move() function.

  - Fix a 0.97 regression when using a variable expansion (like
    $OBJSUFFIX) in a source file name to a builder with attached source
    builders that match suffix (like Program()+Object()).

  - Have the Java parser recognize generics (surrounded by angle brackets)
    so they don't interfere with identifying anonymous inner classes.